--- a/css/style.css
+++ b/css/style.css
@@ -387,8 +387,10 @@ li {
 
 .orang-section {
   background: rgba(255, 179, 66, 1);
-  height: 400px;
-  padding-top: 50px;
+  height: 860px;
+  padding-top: 70px;
+  z-index: 2;
+  position: relative;
 }
 
 .text-orangas {
@@ -398,8 +400,6 @@ li {
   height: 27px;
   align-items: center;
   justify-content: center;
-  margin-left: 500px;
-  margin-top: 80px;
 }
 
 .parg-orang {
@@ -416,7 +416,11 @@ li {
 
 .new-info-container {
   text-align: center;
-
+  margin-top: 100px;
+  align-items: center;
+  align-content: center;
+  display: flex;
+  flex-direction: column
 }
 
 .glav-orang {
@@ -439,4 +443,250 @@ li {
   /* width: 600px; */
   margin-left: 160px;
   margin-right: 160px;
+}
+
+/* button-container */
+.button-container {
+  text-align: center;
+}
+
+
+
+.button-click {
+  width: 219px;
+  height: 67px;
+  border-radius: 3px;
+  border: 1px solid rgba(28, 39, 82, 1);
+  margin: 20px 30px;
+  background-color: #FFB342;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+}
+
+.button-click:hover {
+  background-color: #ffffff;
+}
+
+.button-click:focus {
+  background-color: #ffffff;
+}
+
+.button-click.active {
+  background-color: #ffffff;
+}
+
+.btn-text {
+  font-size: 19px;
+  font-weight: 500;
+  line-height: 30px;
+  text-align: left;
+  color: rgb(0, 0, 0);
+
+  display: flex;
+  justify-content: center;
+}
+
+
+.contentie-container {
+  margin-top: 30px;
+  display: flex;
+  align-items: center;
+
+  height: 500px;
+  margin-left: 100px;
+  margin-right: 100px;
+  background-color: rgba(255, 255, 255, 1);
+  box-shadow: -2px 8px 20px 1px rgba(0, 0, 0, 0.09);
+}
+
+
+
+/* Servises */
+
+.services {
+  background: rgba(244, 244, 244, 1);
+  height: 1100px;
+
+  padding-top: 1px;
+}
+
+.servis {
+  display: flex;
+  margin-top: 200px;
+  justify-content: center;
+  align-items: center;
+  height: 27px;
+  background: rgba(255, 255, 255, 1);
+  width: 213px;
+  margin-left: 520px;
+  color: rgba(28, 39, 82, 1);
+}
+
+.parg-servis {
+  font-family: 'Inter';
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0.36000001430511475px;
+  text-align: center;
+  margin-left: 5px;
+}
+
+.glavn-servis {
+  margin-bottom: 10px;
+  font-family: 'Mulish';
+  font-size: 45px;
+  font-weight: 400;
+  line-height: 59px;
+  letter-spacing: 0.36000001430511475px;
+  text-align: center;
+  color: rgba(28, 39, 82, 1);
+}
+
+.paragr-servis {
+  font-family: 'Inter';
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0.36000001430511475px;
+  text-align: center;
+  color: rgba(126, 126, 126, 1);
+  width: 800px;
+  margin: 0 auto;
+}
+
+.column-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 30px;
+  align-items: center;
+  flex-direction: row;
+  align-content: center;
+  margin-top: 30px;
+  padding: 20px 50px;
+}
+
+.column {
+  width: 295px;
+  height: 278px;
+  background: rgba(28, 39, 82, 1);
+}
+
+.glavn-column {
+  font-family: 'Mulish';
+  font-size: 22px;
+  font-weight: 400;
+  letter-spacing: 0.36000001430511475px;
+  text-align: left;
+  color: rgba(255, 179, 66, 1);
+  margin-left: 30px;
+}
+
+.paragr-column {
+  font-family: 'Inter';
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 23px;
+  letter-spacing: 0.36000001430511475px;
+  text-align: left;
+  color: rgba(210, 210, 210, 1);
+  margin-left: 30px;
+}
+
+.img-column {
+  margin-top: 30px;
+  margin-left: 30px;
+}
+
+/* image-text-section */
+
+
+
+
+.image-textar-section {
+  display: flex;
+  background-color: #fff;
+  /* Цвет фона секции (если нужен) */
+}
+
+.par-wir {
+  font-family: 'Inter';
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0.36000001430511475px;
+  text-align: left;
+  margin-left: 5px;
+}
+
+.us-wir {
+  display: flex;
+  align-items: center;
+  background: rgba(244, 244, 244, 1);
+  height: 27px;
+  justify-content: center;
+  margin-top: 20px;
+  margin-left: 100px;
+  width: 200px;
+  margin-bottom: -20px;
+}
+
+.new-info-wir {
+  margin-left: 100px;
+  font-family: 'Mulish';
+  font-size: 45px;
+  font-weight: 400;
+  letter-spacing: 0.36000001430511475px;
+  text-align: left;
+  color: rgba(28, 39, 82, 1);
+}
+
+.para-new-wir {
+  font-family: 'Inter';
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 20px;
+  letter-spacing: 0.36000001430511475px;
+  text-align: left;
+  margin-left: 100px;
+  color: rgba(126, 126, 126, 1);
+
+  margin-right: 70px;
+  margin-top: -20px;
+}
+
+.boolst {
+  margin-left: 100px;
+}
+
+.garip {
+  display: flex;
+  align-items: center;
+}
+
+.info-bolt {
+  margin-left: 15px;
+  font-family: 'Mulish';
+  font-size: 19px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 0.36000001430511475px;
+  text-align: left;
+  color: rgba(28, 39, 82, 1);
+}
+
+.info-bolt-parg {
+  font-family: 'Inter';
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0.36000001430511475px;
+  text-align: left;
+  color: rgba(126, 126, 126, 1);
+  margin-right: 150px;
+  margin-left: 45px;
+  margin-top: -10px;
+  margin-bottom: px;
 }
