--- a/css/style.css
+++ b/css/style.css
@@ -1090,7 +1090,7 @@ li {
 .text-qir {
   width: 470px;
   height: 200px;
-  margin-top: 100px;
+  margin-top: 70px;
   margin-left: 100px;
 }
 
@@ -1204,4 +1204,59 @@ li {
 .input-container input:valid+label {
   opacity: 0;
   /* Исчезновение лейбла при фокусе или вводе текста */
+}
+
+
+
+/* footer-section */
+
+.footer-section {
+  height: 400px;
+  background-color: rgba(28, 39, 82, 1);
+}
+
+.footer-logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo-box {
+  margin-top: 50px;
+}
+
+.address-footer {
+  display: flex;
+  margin-left: 20px;
+  align-items: center;
+  margin-top: 40px;
+}
+
+
+.logo-adress-footer {
+  display: flex;
+}
+
+
+
+.parg-adres-footer {
+  font-family: 'Mulish';
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 26px;
+  letter-spacing: 0.36000001430511475px;
+  text-align: left;
+  color: rgba(255, 255, 255, 1);
+}
+
+.email-cont-footer,
+.tell-cont-footer {
+  font-family: 'Inter';
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 27px;
+  letter-spacing: 0.36000001430511475px;
+  text-align: left;
+  color: rgba(255, 255, 255, 1);
+  text-decoration: none;
 }
