--- a/css/style.css
+++ b/css/style.css
@@ -10,107 +10,277 @@ li {
   text-decoration: none;
 }
 
+@media only screen and (max-width: 489px) {
+  .container {
+    max-width: 489px;
+    margin: 0 auto;
+  }
+}
 
+@media only screen and (min-width: 978px) {
+  .container {
+    max-width: 1400px;
+    margin: 0 auto;
+  }
+}
 
-.header {
-  max-width: 1440px;
-  height: 69px;
-  background-color: #ebebeb;
+@media only screen and (max-width: 489px) {
+  .header {
+    max-width: 489px;
+    height: 30px;
+    background-color: #ebebeb;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .header {
+    max-width: 1440px;
+    height: 69px;
+    background-color: #ebebeb;
+  }
+}
+
+@media only screen and (max-width: 489px) {
+  .dod-header {
+    display: flex;
+    max-width: 489px;
+    height: 29px;
+    align-items: center;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .dod-header {
+    display: flex;
+    width: 1200px;
+    height: 29px;
+  }
+}
+
+@media only screen and (max-width: 489px) {
+  .parg-header {
+    margin-left: 20px;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 22px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: #1c2752;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .parg-header {
+    margin-left: 240px;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: #1c2752;
+  }
+}
+
+@media only screen and (max-width: 489px) {
+  .social-icons-header {
+    display: flex;
+    list-style: none;
+    gap: 10px;
+    /* display: none; */
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .social-icons-header {
+    margin-left: 300px;
+    display: flex;
+    list-style: none;
+    gap: 29px;
+    margin-top: 21px;
+  }
 }
 
 
-.dod-header {
-  display: flex;
-  width: 1200px;
-  height: 29px;
+@media only screen and (max-width: 489px) {
+  .social-icn {
+    list-style: none;
+
+  }
 }
 
-.parg-header {
-  margin-left: 240px;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 27px;
-  letter-spacing: 0.36000001430511475px;
-  text-align: left;
-  color: #1c2752;
-}
-
-.social-icons-header {
-  margin-left: 300px;
-  display: flex;
-  list-style: none;
-  gap: 29px;
-  margin-top: 21px;
-
-
-}
-
-.social-icn {
-  list-style: none;
+@media only screen and (min-width: 978px) {
+  .social-icn {
+    list-style: none;
+  }
 }
 
 /* sect-one */
 
-.sect-one {
-  /* width: 1200px; */
-  height: 128px;
-  background-color: #ffffff;
-  margin-left: 140px;
-  margin-right: 140px;
-  display: flex;
+@media only screen and (max-width: 489px) {
+  .sect-one {
+
+    height: 128px;
+    background-color: #ffffff;
+    margin-left: 10px;
+    /* margin-right: 140px; */
+    display: flex;
+  }
 }
 
-.logo {
-  width: 242px;
-  height: 48px;
-  padding-top: 40px;
+@media only screen and (min-width: 978px) {
+  .sect-one {
+    /* width: 1200px; */
+    height: 128px;
+    background-color: #ffffff;
+    margin-left: 140px;
+    margin-right: 140px;
+    display: flex;
+  }
 }
 
-.logo-adress {
-  display: flex;
-  margin-top: 30px;
-  margin-left: 200px;
-  margin-bottom: 25px;
+@media only screen and (max-width: 489px) {
+  .logo-fotofra {
+    width: 180px;
+  }
 }
 
-.address {
-  display: flex;
-  margin-left: 20px;
-  align-items: center;
-}
-
-.parg-adres {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 26px;
-  letter-spacing: 0.36000001430511475px;
-  text-align: left;
-}
-
-.logo-email,
-.logo-tell {
-  cursor: pointer;
-  transition: transform 0.3s;
-}
-
-.logo-email:focus,
-.logo-email:hover,
-.logo-tell:focus,
-.logo-tell:hover {
-  transform: scale(1.2);
+@media only screen and (max-width: 489px) {
+  .logo {
+    width: 242px;
+    height: 48px;
+    padding-top: 20px;
+  }
 }
 
 
+@media only screen and (min-width: 978px) {
+  .logo {
+    width: 242px;
+    height: 48px;
+    padding-top: 40px;
+  }
+}
 
-.email-cont,
-.tell-cont {
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 27px;
-  letter-spacing: 0.36000001430511475px;
-  text-align: left;
-  color: #7e7e7e;
-  text-decoration: none;
+@media only screen and (max-width: 489px) {
+  .logo-adress {
+    margin-top: 15px;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .logo-adress {
+    display: flex;
+    margin-top: 30px;
+    margin-left: 200px;
+    margin-bottom: 25px;
+  }
+}
+
+@media only screen and (max-width: 489px) {
+  .address {
+    display: flex;
+    align-items: center;
+    margin-top: -10px;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .address {
+    display: flex;
+    align-items: center;
+    margin-left: 20px;
+  }
+}
+
+@media only screen and (max-width: 489px) {
+  .parg-adres {
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .parg-adres {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+  }
+}
+
+@media only screen and (max-width: 489px) {
+
+  .logo-email,
+  .logo-tell {
+    cursor: pointer;
+    transition: transform 0.3s;
+    width: 35px;
+    height: 35px;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+
+  .logo-email,
+  .logo-tell {
+    cursor: pointer;
+    transition: transform 0.3s;
+    width: 68px;
+    height: 68px;
+  }
+}
+
+@media only screen and (max-width: 489px) {
+
+  .logo-email:focus,
+  .logo-email:hover,
+  .logo-tell:focus,
+  .logo-tell:hover {
+    transform: scale(1.2);
+  }
+}
+
+@media only screen and (min-width: 978px) {
+
+  .logo-email:focus,
+  .logo-email:hover,
+  .logo-tell:focus,
+  .logo-tell:hover {
+    transform: scale(1.2);
+  }
+}
+
+
+@media only screen and (max-width: 489px) {
+
+  .email-cont,
+  .tell-cont {
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: #7e7e7e;
+    text-decoration: none;
+  }
+}
+
+
+@media only screen and (min-width: 978px) {
+
+  .email-cont,
+  .tell-cont {
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: #7e7e7e;
+    text-decoration: none;
+  }
 }
 
 .teell,
@@ -119,15 +289,26 @@ li {
 }
 
 /* navigation */
+@media only screen and (max-width: 489px) {
+  .sect-info {
+    max-width: 489px;
+    /* margin-right: 140px; */
+    height: 50px;
+    background: #ffb342;
+    position: absolute;
+    z-index: 1;
+  }
+}
 
-
-.sect-info {
-  margin-left: 140px;
-  margin-right: 140px;
-  height: 80px;
-  background: #ffb342;
-  position: absolute;
-  z-index: 1;
+@media only screen and (min-width: 978px) {
+  .sect-info {
+    margin-left: 140px;
+    margin-right: 140px;
+    height: 80px;
+    background: #ffb342;
+    position: absolute;
+    z-index: 1;
+  }
 }
 
 
@@ -135,21 +316,42 @@ li {
   display: flex;
 }
 
-.navig-icons {
-  display: flex;
-  gap: 50px;
-  padding-top: 7px;
+@media only screen and (max-width: 489px) {
+  .navig-icons {
+    display: flex;
+    gap: 17px;
+    margin-left: -15px;
+  }
 }
 
 
+@media only screen and (min-width: 978px) {
+  .navig-icons {
+    display: flex;
+    gap: 50px;
+    padding-top: 7px;
+  }
+}
 
-.na-glav {
-  text-decoration: none;
-  color: #222222;
-  font-size: 17px;
-  font-weight: 600;
-  line-height: 30px;
-  transition: color 0.3s ease;
+@media only screen and (max-width: 489px) {
+  .na-glav {
+    text-decoration: none;
+    color: #222222;
+    font-size: 12px;
+    font-weight: 600;
+    transition: color 0.3s ease;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .na-glav {
+    text-decoration: none;
+    color: #222222;
+    font-size: 17px;
+    font-weight: 600;
+    line-height: 30px;
+    transition: color 0.3s ease;
+  }
 }
 
 
@@ -157,40 +359,88 @@ li {
   text-decoration: none;
 }
 
-.na-glav:hover {
-  color: #fff;
-  /* Новый цвет текста при наведении */
+@media only screen and (max-width: 489px) {
+  .na-glav:hover {
+    color: #fff;
+  }
 }
 
-/* Применяем цвет при нажатии */
-.na-glav:active {
-  color: #fff;
+@media only screen and (min-width: 978px) {
+  .na-glav:hover {
+    color: #fff;
+  }
 }
 
-.cta-button {
-  width: 250px;
-  height: 55px;
-  border-radius: 2px;
-  background: rgb(41, 53, 107);
-
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 30px;
-  letter-spacing: 0.36000001430511475px;
-  text-align: center;
-  color: #f4f4f4;
-  margin-top: 12px;
-  margin-left: 85px;
-  margin-right: 25px;
-
-  cursor: pointer;
-  transition: transform 0.3s;
-  border: 2px solid rgba(28, 39, 82, 1)
+@media only screen and (max-width: 489px) {
+  .na-glav:active {
+    color: #fff;
+  }
 }
 
-.cta-button:focus,
-.cta-button:hover {
-  transform: scale(1.1);
+@media only screen and (min-width: 978px) {
+  .na-glav:active {
+    color: #fff;
+  }
+}
+
+@media only screen and (max-width: 489px) {
+  .cta-button {
+    width: 75px;
+    height: 30px;
+    border-radius: 2px;
+    background: rgb(41, 53, 107);
+    font-size: 11px;
+    font-weight: 400;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    color: #f4f4f4;
+    margin-top: 12px;
+    margin-left: 10px;
+    margin-right: 25px;
+    cursor: pointer;
+    transition: transform 0.3s;
+    border: 2px solid rgba(28, 39, 82, 1)
+  }
+}
+
+
+@media only screen and (min-width: 978px) {
+  .cta-button {
+    width: 250px;
+    height: 55px;
+    border-radius: 2px;
+    background: rgb(41, 53, 107);
+
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 30px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    color: #f4f4f4;
+    margin-top: 12px;
+    margin-left: 85px;
+    margin-right: 25px;
+
+    cursor: pointer;
+    transition: transform 0.3s;
+    border: 2px solid rgba(28, 39, 82, 1)
+  }
+}
+
+@media only screen and (max-width: 489px) {
+
+  .cta-button:focus,
+  .cta-button:hover {
+    transform: scale(1.1);
+  }
+}
+
+@media only screen and (min-width: 978px) {
+
+  .cta-button:focus,
+  .cta-button:hover {
+    transform: scale(1.1);
+  }
 }
 
 .ct-button {
