--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,12 @@ li {
 
 @media only screen and (max-width: 489px) {
   .container {
-    max-width: 489px;
+    width: auto;
     margin: 0 auto;
   }
 }
 
-@media only screen and (min-width: 978px) {
+@media only screen and (min-width: 1100px) {
   .container {
     max-width: 1400px;
     margin: 0 auto;
@@ -32,7 +32,7 @@ li {
   }
 }
 
-@media only screen and (min-width: 978px) {
+@media only screen and (min-width: 1100px) {
   .header {
     max-width: 1440px;
     height: 69px;
@@ -146,7 +146,6 @@ li {
 
 @media only screen and (max-width: 489px) {
   .logo {
-    width: 242px;
     height: 48px;
     padding-top: 20px;
   }
@@ -289,12 +288,12 @@ li {
 }
 
 /* navigation */
-@media only screen and (max-width: 489px) {
+@media only screen and (min-width: 320px) {
   .sect-info {
     width: auto;
-    /* margin-right: 140px; */
-    height: 50px;
-    background: #ffb342;
+    padding-right: 15px;
+    height: 45px;
+    background-color: #ffb342;
     position: absolute;
     z-index: 1;
   }
@@ -385,6 +384,7 @@ li {
 
 @media only screen and (max-width: 489px) {
   .cta-button {
+    display: none;
     width: 75px;
     height: 30px;
     border-radius: 2px;
@@ -511,13 +511,13 @@ li {
 
 @media only screen and (max-width: 489px) {
   .parg-hero {
-    font-size: 10px;
+    font-size: 9px;
     font-weight: 400;
     line-height: 14px;
     letter-spacing: 0.36000001430511475px;
     text-align: left;
     color: #ffffff;
-    margin-left: 7px;
+    margin-left: 5px;
   }
 }
 
@@ -535,12 +535,25 @@ li {
 }
 
 
-@media only screen and (max-width: 489px) {
+@media only screen and (max-width: 376px) {
   .text-hero {
     width: 400px;
-    font-size: 44px;
+    font-size: 40px;
     font-weight: 400;
-    line-height: 59px;
+    line-height: 50px;
+    letter-spacing: 1.2000000476837158px;
+    text-align: left;
+    color: #ffffff;
+    margin-top: 20px;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .text-hero {
+    width: 400px;
+    font-size: 42px;
+    font-weight: 400;
+    line-height: 50px;
     letter-spacing: 1.2000000476837158px;
     text-align: left;
     color: #ffffff;
@@ -562,13 +575,23 @@ li {
 }
 
 
-@media only screen and (max-width: 489px) {
+@media only screen and (max-width: 376px) {
   .content-container {
     display: flex;
     align-items: center;
     background-color: #ffffff33;
-    width: max-content;
     height: 25px;
+    width: 280px;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .content-container {
+    display: flex;
+    align-items: center;
+    background-color: #ffffff33;
+    height: 25px;
+    width: 280px;
   }
 }
 
@@ -584,12 +607,29 @@ li {
 }
 
 
-@media only screen and (max-width: 489px) {
+@media only screen and (max-width: 376px) {
   .button-hero {
     display: block;
-    width: 160px;
-    height: 51px;
-    font-size: 17px;
+    width: 150px;
+    height: 46px;
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 2px;
+    background: #ffb342;
+    border: 2px solid rgba(255, 179, 66, 1);
+    cursor: pointer;
+    transition: transform 0.3s;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .button-hero {
+    display: block;
+    width: 150px;
+    height: 46px;
+    font-size: 15px;
     font-weight: 600;
     line-height: 30px;
     text-align: center;
@@ -636,12 +676,17 @@ li {
 }
 
 /* image-text-section */
-@media only screen and (max-width: 489px) {
+@media only screen and (max-width: 376px) {
   .image-text-section {
     padding-top: 20px;
     padding-bottom: 20px;
-    padding-left: 10px;
-    padding-right: 10px;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .image-text-section {
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
 }
 
@@ -652,10 +697,17 @@ li {
   }
 }
 
-@media only screen and (max-width: 489px) {
+@media only screen and (max-width: 376px) {
   .foto-fotik {
-    width: 380px;
-    height: 420px;
+    width: 300px;
+    height: 330px;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .foto-fotik {
+    width: 350px;
+    height: 380px;
   }
 }
 
@@ -707,9 +759,22 @@ li {
   }
 }
 
-@media only screen and (max-width: 489px) {
+@media only screen and (max-width: 376px) {
   .parg-bluu {
-    font-size: 11px;
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: #1c2752;
+    margin-left: 10px;
+    background-color: #f4f4f4;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .parg-bluu {
+    font-size: 10px;
     font-weight: 400;
     line-height: 27px;
     letter-spacing: 0.36000001430511475px;
@@ -733,16 +798,29 @@ li {
   }
 }
 
-@media only screen and (max-width: 489px) {
+@media only screen and (max-width: 376px) {
   .text-glavn {
-    font-size: 24px;
+    font-size: 29px;
     font-weight: 400;
-    line-height: 59px;
+    line-height: 37px;
     letter-spacing: 0.36000001430511475px;
     text-align: center;
     color: #1c2752;
     margin-bottom: 20px;
-    margin-top: 2px;
+    margin-top: 15px;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .text-glavn {
+    font-size: 29px;
+    font-weight: 400;
+    line-height: 37px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    color: #1c2752;
+    margin-bottom: 20px;
+    margin-top: 15px;
   }
 }
 
@@ -788,11 +866,19 @@ li {
   align-items: center;
 }
 
-@media only screen and (max-width: 489px) {
+@media only screen and (max-width: 376px) {
   .pidas {
     background: rgb(239, 237, 237);
     width: 200px;
-    height: 170px;
+    height: 160px;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .pidas {
+    background: rgb(239, 237, 237);
+    width: 200px;
+    height: 160px;
   }
 }
 
@@ -839,13 +925,27 @@ li {
   }
 }
 
-@media only screen and (max-width: 489px) {
+@media only screen and (max-width: 376px) {
   .new-info {
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 400;
     letter-spacing: 0.36000001430511475px;
     text-align: left;
     color: rgba(126, 126, 126, 1);
+    line-height: 16px;
+
+  }
+}
+
+
+@media only screen and (min-width: 376px) {
+  .new-info {
+    font-size: 11px;
+    font-weight: 400;
+    letter-spacing: 0.36000001430511475px;
+    text-align: left;
+    color: rgba(126, 126, 126, 1);
+    line-height: 16px;
 
   }
 }
@@ -868,64 +968,206 @@ li {
 
 /* orang-section */
 
-.orang-section {
-  background: rgba(255, 179, 66, 1);
-  height: 860px;
-  padding-top: 70px;
-  z-index: 2;
-  position: relative;
+@media only screen and (max-width: 376px) {
+  .orang-section {
+    background: rgba(255, 179, 66, 1);
+    height: 860px;
+    padding-top: 10px;
+    z-index: 2;
+    position: relative;
+  }
 }
 
-.text-orangas {
-  display: flex;
-  background-color: #f4f4f4;
-  width: max-content;
-  height: 27px;
-  align-items: center;
-  justify-content: center;
+@media only screen and (min-width: 376px) {
+  .orang-section {
+    background: rgba(255, 179, 66, 1);
+    height: 860px;
+    padding-top: 10px;
+    z-index: 2;
+    position: relative;
+  }
 }
 
-.parg-orang {
-  font-size: 18px;
-  font-weight: 400;
-  letter-spacing: 0.36000001430511475px;
-  text-align: center;
-  background-color: #f4f4f4;
-  margin-left: 10px;
+@media only screen and (min-width: 978px) {
+  .orang-section {
+    background: rgba(255, 179, 66, 1);
+    height: 860px;
+    padding-top: 70px;
+    z-index: 2;
+    position: relative;
+  }
+}
 
+@media only screen and (max-width: 376px) {
+  .text-orangas {
+    display: flex;
+    background-color: #f4f4f4;
+    height: 20px;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .text-orangas {
+    display: flex;
+    background-color: #f4f4f4;
+    height: 20px;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .text-orangas {
+    display: flex;
+    background-color: #f4f4f4;
+    width: max-content;
+    height: 27px;
+    align-items: center;
+    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 376px) {
+  .parg-orang {
+    font-size: 11px;
+    font-weight: 400;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    background-color: #f4f4f4;
+    margin-left: 5px;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .parg-orang {
+    font-size: 11px;
+    font-weight: 400;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    background-color: #f4f4f4;
+    margin-left: 5px;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .parg-orang {
+    font-size: 18px;
+    font-weight: 400;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    background-color: #f4f4f4;
+    margin-left: 10px;
+  }
 }
 
 /* new-info-container */
 
-.new-info-container {
-  text-align: center;
-  margin-top: 100px;
-  align-items: center;
-  align-content: center;
-  display: flex;
-  flex-direction: column
+@media only screen and (max-width: 376px) {
+  .new-info-container {
+    text-align: center;
+    margin-top: 16px;
+    align-items: center;
+    display: flex;
+    flex-direction: column
+  }
 }
 
-.glav-orang {
-  font-size: 45px;
-  font-weight: 400;
-  line-height: 59px;
-  letter-spacing: 0.36000001430511475px;
-  text-align: center;
-  color: rgba(28, 39, 82, 1);
-  margin-bottom: 1px;
+
+@media only screen and (min-width: 376px) {
+  .new-info-container {
+    text-align: center;
+    margin-top: 16px;
+    align-items: center;
+    display: flex;
+    flex-direction: column
+  }
 }
 
-.parg-orang2 {
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 27px;
-  letter-spacing: 0.36000001430511475px;
-  text-align: center;
-  color: rgba(28, 39, 82, 1);
-  /* width: 600px; */
-  margin-left: 160px;
-  margin-right: 160px;
+@media only screen and (min-width: 978px) {
+  .new-info-container {
+    text-align: center;
+    margin-top: 10px;
+    align-items: center;
+    align-content: center;
+    display: flex;
+    flex-direction: column
+  }
+}
+
+@media only screen and (max-width: 376px) {
+  .glav-orang {
+    font-size: 35px;
+    font-weight: 400;
+    line-height: 45px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    color: rgba(28, 39, 82, 1);
+    margin-bottom: 1px;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .glav-orang {
+    font-size: 36px;
+    font-weight: 400;
+    line-height: 45px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    color: rgba(28, 39, 82, 1);
+    margin-bottom: 1px;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .glav-orang {
+    font-size: 45px;
+    font-weight: 400;
+    line-height: 59px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    color: rgba(28, 39, 82, 1);
+    margin-bottom: 1px;
+  }
+}
+
+@media only screen and (max-width: 376px) {
+  .parg-orang2 {
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    color: rgba(28, 39, 82, 1);
+    width: 350px;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .parg-orang2 {
+    font-size: 10px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    color: rgba(28, 39, 82, 1);
+    width: 350px;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .parg-orang2 {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    letter-spacing: 0.36000001430511475px;
+    text-align: center;
+    color: rgba(28, 39, 82, 1);
+    margin-left: 160px;
+    margin-right: 160px;
+    width: auto;
+  }
 }
 
 /* button-container */
@@ -934,18 +1176,49 @@ li {
 }
 
 
+@media only screen and (max-width: 376px) {
+  .button-click {
+    width: 95px;
+    height: 45px;
+    border-radius: 3px;
+    border: 1px solid rgba(28, 39, 82, 1);
+    margin: 5px;
+    background-color: #FFB342;
+    cursor: pointer;
+    transition: background-color 0.3s;
 
-.button-click {
-  width: 219px;
-  height: 67px;
-  border-radius: 3px;
-  border: 1px solid rgba(28, 39, 82, 1);
-  margin: 20px 30px;
-  background-color: #FFB342;
-  cursor: pointer;
-  transition: background-color 0.3s;
 
+  }
 }
+
+@media only screen and (min-width: 376px) {
+  .button-click {
+    width: 100px;
+    height: 49px;
+    border-radius: 3px;
+    border: 1px solid rgba(28, 39, 82, 1);
+    background-color: #FFB342;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin: 5px;
+
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .button-click {
+    width: 219px;
+    height: 67px;
+    border-radius: 3px;
+    border: 1px solid rgba(28, 39, 82, 1);
+    margin: 20px 30px;
+    background-color: #FFB342;
+    cursor: pointer;
+    transition: background-color 0.3s;
+
+  }
+}
+
 
 .button-click:hover {
   background-color: #ffffff;
@@ -959,15 +1232,57 @@ li {
   background-color: #ffffff;
 }
 
-.btn-text {
-  font-size: 19px;
-  font-weight: 500;
-  line-height: 30px;
-  text-align: left;
-  color: rgb(0, 0, 0);
+@media only screen and (max-width: 376px) {
+  .button-icon {
+    width: 20px;
+  }
+}
 
-  display: flex;
-  justify-content: center;
+@media only screen and (min-width: 376px) {
+  .button-icon {
+    width: 20px;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .button-icon {
+    width: auto;
+  }
+}
+
+
+@media only screen and (max-width: 376px) {
+  .btn-text {
+    font-size: 12px;
+    font-weight: 500;
+    text-align: left;
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media only screen and (min-width: 376px) {
+  .btn-text {
+    font-size: 12px;
+    font-weight: 500;
+    text-align: left;
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media only screen and (min-width: 978px) {
+  .btn-text {
+    font-size: 19px;
+    font-weight: 500;
+    line-height: 30px;
+    text-align: left;
+    color: rgb(0, 0, 0);
+    display: flex;
+    justify-content: center;
+  }
 }
 
 
